fix cell not use sheet